update signin and signup pages for consistency

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -93,7 +93,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
     <InjectKeys>
 
     <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-      ```typescript
+      ```js filename="index.js"
       import Clerk from '@clerk/clerk-js';
       import { dark } from "@clerk/themes";
 
@@ -118,16 +118,22 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       });
       ```
 
-      ```html
+      ```html filename="index.html"
       <!-- Add a <div> element with id="sign-in" to your HTML -->
       <div id="sign-in"></div>
 
       <script>
+        // Get this URL and Publishable Key from the Clerk Dashboard
+        const clerkPublishableKey = {{pub_key}};
+        const frontendApi = '[your-domain].clerk.accounts.dev';
+        const version = '@latest'; // Set to appropriate version
+
+        // Creates asynchronous script
         const script = document.createElement('script');
-        // Set your Clerk publishable key
-        script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
+        script.setAttribute('data-clerk-frontend-api', frontendApi);
+        script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
         script.async = true;
-        script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+        script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
         script.addEventListener('load', async function () {
           await window.Clerk.load();
