--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -22,10 +22,10 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   <Tab>
     You can embed the `<SignUp />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignUp />` component should be mounted on a public page.
 
-    <Callout>The example below shows the Sign In page mounted on the url /sign-in. For more information on how to implement this, check out the [`<SignIn />` UI page](/docs/components/authentication/sign-in).</Callout>
+    <Callout>The example below shows the Sign Up page mounted on the url /sign-up. For more information on how to implement this, check out the [`<SignUp />` UI page](/docs/components/authentication/sign-up).</Callout>
 
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/sign-up/[[...sign-up]]/page.[jsx/tsx]"
+      ```jsx filename="/app/sign-up/[[...sign-up]]/page.tsx"
       import { SignUp } from "@clerk/nextjs";
 
       export default function Page() {
@@ -33,7 +33,7 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
       }
       ```
 
-      ```jsx filename="/pages/sign-up/[[...index]].[jsx/tsx]"
+      ```jsx filename="/pages/sign-up/[[...index]].tsx"
       import { SignUp } from "@clerk/nextjs";
 
       const SignUpPage = () => (
@@ -85,12 +85,72 @@ Below is basic implementation of the `<SignUp />` component. You can use this as
   </Tab>
 
   <Tab>
-    ```js filename="sign-up.js"
-    window.Clerk.mountSignUp(
-      document.getElementById("sign-up")
-    );
-    window.Clerk.openSignUp();
-    ```
+   In the example below, the [`mountSignUp()`](/docs/references/javascript/clerk/sign-up#mount-sign-up) method is used to render the `<SignUp />` component to a `<div>` element with `id="sign-up"`.
+
+    To learn more about the methods available for rendering and controlling the `<SignUp />` component in a JavaScript application, see the [JavaScript reference docs](/docs/references/javascript/clerk/sign-up).
+
+    <InjectKeys>
+
+    <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+      ```js filename="index.js"
+      import Clerk from '@clerk/clerk-js';
+      import { dark } from "@clerk/themes";
+
+      // Add a <div> element with id="sign-in" to your HTML
+      document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
+        <div
+          id="sign-up"
+        >
+        </div>
+      `;
+
+      const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
+
+      // Initialize Clerk with your Clerk publishable key
+      const clerk = new Clerk(`{{pub_key}}`);
+      await clerk.load();
+
+      clerk.mountSignUp(signUpComponent, {
+        appearance: {
+          baseTheme: dark
+        }
+      });
+      ```
+
+      ```html filename="index.html"
+      <!-- Add a <div> element with id="sign-up" to your HTML -->
+      <div id="sign-up"></div>
+
+      <script>
+        // Get this URL and Publishable Key from the Clerk Dashboard
+        const clerkPublishableKey = {{pub_key}};
+        const frontendApi = '[your-domain].clerk.accounts.dev';
+        const version = '@latest'; // Set to appropriate version
+
+        // Creates asynchronous script
+        const script = document.createElement('script');
+        script.setAttribute('data-clerk-frontend-api', frontendApi);
+        script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+        script.async = true;
+        script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+        script.addEventListener('load', async function () {
+          await window.Clerk.load();
+
+          const signInComponent = document.querySelector('#sign-up');
+
+          window.Clerk.openSignUp(signUpComponent, {
+            appearance: {
+              baseTheme: dark
+            }
+          });
+        });
+        document.body.appendChild(script);
+      </script>
+      ```
+    </CodeBlockTabs>
+
+    </InjectKeys>
   </Tab>
 </Tabs>
 
