--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -38,7 +38,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript
+  ```js filename="index.js"
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
@@ -63,16 +63,22 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
   });
   ```
 
-  ```html
+  ```html filename="index.html"
   <!-- Add a <div> element with id="sign-in" to your HTML -->
   <div id="sign-in"></div>
 
   <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = {{pub_key}};
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
     const script = document.createElement('script');
-    // Set your Clerk publishable key
-    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -108,8 +114,10 @@ function unmountSignIn(node: HTMLDivElement): void;
 
 ### `unmountSignIn()` usage
 
+<InjectKeys>
+
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {19}
+  ```js filename="index.js" {19}
   import Clerk from '@clerk/clerk-js';
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
@@ -120,8 +128,8 @@ function unmountSignIn(node: HTMLDivElement): void;
 
   const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
-  const clerk = new Clerk('pk_[publishable_key]');
-
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
   clerk.mountSignIn(signInComponent);
@@ -131,13 +139,20 @@ function unmountSignIn(node: HTMLDivElement): void;
   clerk.unmountSignIn(signInComponent);
   ```
 
-  ```html {17}
+  ```html filename="index.html" {17}
   <div id="sign-in"></div>
   <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = {{pub_key}};
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -155,6 +170,8 @@ function unmountSignIn(node: HTMLDivElement): void;
   ```
 </CodeBlockTabs>
 
+</InjectKeys>
+
 ## `openSignIn()`
 
 Opens the `<SignIn />` component as an overlay at the root of your HTML `body` element.
@@ -171,12 +188,15 @@ function openSignIn(props?: SignInProps): void;
 
 ### `openSignIn()` usage
 
+<InjectKeys>
+
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {7-11}
+  ```js filename="index.js" {7-11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
   clerk.openSignIn({
@@ -186,12 +206,19 @@ function openSignIn(props?: SignInProps): void;
   });
   ```
 
-  ```html {10-14}
+  ```html filename="index.html" {10-14}
   <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = {{pub_key}};
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -207,6 +234,8 @@ function openSignIn(props?: SignInProps): void;
   ```
 </CodeBlockTabs>
 
+</InjectKeys>
+
 ## `closeSignIn()`
 
 Closes the sign in overlay.
@@ -219,12 +248,15 @@ function closeSignIn(): void;
 
 ### `closeSignIn()` usage
 
+<InjectKeys>
+
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {11}
+  ```js filename="index.js" {11}
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  const clerk = new Clerk('pk_[publishable_key]');
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
   clerk.openSignIn();
@@ -234,12 +266,19 @@ function closeSignIn(): void;
   clerk.closeSignIn();
   ```
 
-  ```html {14}
+  ```html filename="index.html" {14}
   <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = {{pub_key}};
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     script.addEventListener('load', async function () {
       await window.Clerk.load();
@@ -254,6 +293,8 @@ function closeSignIn(): void;
   </script>
   ```
 </CodeBlockTabs>
+
+</InjectKeys>
 
 ## `SignInProps`
 
