--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -676,11 +676,7 @@ export default function UseUserExample() {
 
 ## Additional consideration
 
-We recommend integrating over the air (OTA) updates into your Expo application. This will enable 
-you to easily roll out feature updates and security patches alike, as they’re applied to Clerk's SDK’s,
-without having to do a full AppStore/GooglePlay review cycle. Check out [`expo-updates`](https://docs.expo.dev/versions/latest/sdk/updates)
-for how this can accomplished.
-
+We recommend integrating over the air (OTA) updates into your Expo application. This will enable you to easily roll out feature updates and security patches alike, as they're applied to Clerk's SDK's, without having to do a full AppStore/GooglePlay review cycle. Check out [`expo-updates`](https://docs.expo.dev/versions/latest/sdk/updates) for how this can be accomplished.
 
 ## Next steps
 
