fully remove logoUrl

--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: Organization
-description: This is a class that represents an organziation. It's returned from the createOrganization and getOrganization methods on the Clerk class instance.
+description: This is a class that represents an organization. It's returned from the createOrganization and getOrganization methods on the Clerk class instance.
 ---
 
 # `Organization`
@@ -14,7 +14,6 @@ This is a class that represents an organization. It's returned from the [`create
 | `id` | `string` | The unique identifier of the related organization. |
 | `name` | `string` | The name of the related organization. |
 | `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
-| `logoUrl` (deprecated) | `string \| null` | Deprecated in favor of `imageUrl`. |
 | `imageUrl` | `string` | The URL of the organization's logo. |
 | `hasImage` | `boolean` | A getter boolean to check if the organization has an uploaded image. Returns `false` if Clerk is displaying an avatar for the organization. |
 | `membersCount` | `number` | The number of members the associated organization contains. |
