setSession --> setActive; afterSwitchOrganizationUrl --> afterSelectOrganizationUrl

--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -11,7 +11,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
-    #### Check the current sign-in status
+    ### Check the current sign-in status
 
     ```tsx filename="pages/index.tsx"
     import { useSignIn } from "@clerk/nextjs";
@@ -28,7 +28,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
     }
     ```
 
-    #### Sign in a user with a custom flow
+    ### Sign in a user with a custom flow
 
     ```tsx filename="pages/signin.tsx"
     import { useSignIn } from "@clerk/nextjs";
@@ -90,7 +90,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
   </Tab>
 
   <Tab>
-    #### Check the current sign-in status
+    ### Check the current sign-in status
 
     ```tsx filename="pages/sign-in-step.tsx"
     import { useSignIn } from "@clerk/clerk-react";
@@ -107,7 +107,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
     }
     ```
 
-    #### Sign in a user with a custom flow
+    ### Sign in a user with a custom flow
 
     ```tsx filename="pages/signin.tsx"
     import { useSignIn } from "@clerk/clerk-react";
@@ -173,7 +173,6 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. |
-| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
 | `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
 
 ### Result status
