--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -1,50 +1,65 @@
 ---
-title: getPendingOrganizationInvitationList()
+title: getOrganizationInvitationList()
 description: Retrieves a list of organization invitations that have not yet been accepted.
 ---
 
-# `getPendingOrganizationInvitationList()`
+# `getOrganizationInvitationList()`
 
 Retrieves a list of organization invitations that have not yet been accepted.
 
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({ organizationId });
+const invitations = await clerkClient.organizations.getOrganizationInvitationList({ organizationId });
 ```
 
-## `GetPendingOrganizationInvitationListParams`
+## `GetOrganizationInvitationListParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to retrieve the list of pending invitations from. |
+| `status?` | [ 'pending' | 'accepted' | 'status' ] | Filters the list of invitations by status. |
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
 ## Examples
 
-### `getPendingOrganizationInvitationList({ limit })`
+### `getOrganizationInvitationList({ status })`
+
+Retrieves organization invitation list that is filtered by the status of the invitation.
+
+```tsx
+const organizationId = 'my-organization-id';
+
+const invitations = await clerkClient.organizations.getOrganizationInvitationList({
+  organizationId,
+  // returns a list of invitations that have not yet been accepted
+  status: [ 'pending' ],
+});
+```
+
+### `getOrganizationInvitationList({ limit })`
 
 Retrieves organization invitation list that is filtered by the number of results.
 
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({
+const invitations = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // returns the first 10 results
   limit: 10,
 });
 ```
 
-### `getPendingOrganizationInvitationList({ offset })`
+### `getOrganizationInvitationList({ offset })`
 
 Retrieves organization invitation list that is filtered by the number of results to skip.
 
 ```tsx
 const organizationId = 'my-organization-id';
 
-const invitations = await clerkClient.organizations.getPendingOrganizationInvitationList({
+const invitations = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
   // skips the first 10 results
   offset: 10,
