update setActive params

--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -5,11 +5,11 @@ description: These are all methods on the Clerk class that help you manage the a
 
 # Session methods
 
-These are all methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class that help you manage the active session and/or organization.
+These are all methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class that help you manage the active session and organization.
 
 ## `setActive()`
 
-A method used to set the active session and/or organization.
+A method used to set the active session or organization, or both.
 
 ```typescript
 function setActive({
@@ -23,8 +23,8 @@ function setActive({
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `session` | [`Session`][session-ref] \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
-| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `session?` | [`Session`][session-ref] \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization?` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
 | `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
 ### `setActive()` returns
