--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -42,7 +42,7 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 | `name` | `string` | The organization name. |
 | `slug?` | `string \| undefined` | The organization slug. |
 
-#### Returns
+#### `update()` returns
 
 | Type | Description |
 | --- | --- |
@@ -58,7 +58,7 @@ Please note that deleting an organization will also delete all memberships and i
 function destroy(): Promise<void>;
 ```
 
-#### Returns
+#### `destroy()` returns
 
 | Type | Description |
 | --- | --- |
@@ -78,7 +78,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 | --- | --- | --- |
 | `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
-#### Returns
+#### `setLogo()` returns
 
 | Type | Description |
 | --- | --- |
@@ -119,10 +119,9 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-- [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations) (deprecated in favor of `getInvitations()`)
-- [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
-- [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
-- [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
+*   [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
+*   [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
+*   [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
 
 ### Domains
 - [`getDomains()`](/docs/references/javascript/organization/domains#get-domains)
