--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -218,20 +218,71 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
 
 </InjectKeys>
 
-## `getOrganizationMemberships()` (deprecated)
+### `createOrganization()` example
 
-<Callout type="warning">
-  `Clerk.getOrganizationMemberships()` is deprecated and will be removed in the [Core 2](https://beta.clerk.com/docs) version of Clerk. Use [`User.getOrganizationMemberships()`](/docs/references/javascript/user/user) instead.
-</Callout>
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+```javascript filename="index.js" {7-24}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+
+  // Create an organization
+  const org = await clerk.createOrganization({
+    name: 'My Organization',
+    slug: 'my-organization',
+  });
+
+  // org will be the newly created Organization object
+  // you can use org however you would like moving forward,
+  // for example, check the org ID:
+  console.log(org.id);
+```
+
+```html filename="index.html" {18-28}
+  <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = `{{pub_key}}`;
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+    script.async = true;
+    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+    // Adds listener to initialize ClerkJS after it's loaded
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      // Create an organization
+      const org = await window.Clerk.createOrganization({
+        name: 'My Organization',
+        slug: 'my-organization',
+      });
+
+      // org will be the newly created Organization object
+      // you can use org however you would like moving forward,
+      // for example, check the org ID:
+      console.log(org.id);
+    });
+    document.body.appendChild(script);
+  </script>
+```
+</CodeBlockTabs>
+
+## `getOrganizationMemberships()`
+
+Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
 
 ```typescript
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
-
-
-### Returns
+### `getOrganizationMemberships()` returns
 
 | Type | Description |
 | --- | --- |
