--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -77,8 +77,18 @@ function getOrganization(organizationId: string): Promise<Organization | undefin
   </Tab>
 
   <Tab>
-  ```html filename="index.html" {9}
+  ```html filename="index.html" {19}
   <div id="sign-in"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -183,9 +193,19 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
   </Tab>
 
   <Tab>
-  ```html filename="index.html" {12-14}
+  ```html filename="index.html" {22-24}
   <div id="sign-in"></div>
   <div id="create-org-button"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk Publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key="{{pub_key}}"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
   <script>
     window.addEventListener("load", async function () {
@@ -244,12 +264,12 @@ function createOrganization({name, slug}: CreateOrganizationParams): Promise<Org
   <script>
     // Get this URL and Publishable Key from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
     script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
