--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -41,7 +41,7 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 | `name` | `string` | The organization name. |
 | `slug?` | `string \| undefined` | The organization slug. |
 
-#### Returns
+#### `update()` returns
 
 | Type | Description |
 | --- | --- |
@@ -57,7 +57,7 @@ Please note that deleting an organization will also delete all memberships and i
 function destroy(): Promise<void>;
 ```
 
-#### Returns
+#### `destroy()` returns
 
 | Type | Description |
 | --- | --- |
@@ -77,7 +77,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 | --- | --- | --- |
 | `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
-#### Returns
+#### `setLogo()` returns
 
 | Type | Description |
 | --- | --- |
@@ -96,7 +96,6 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-*   [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations) (deprecated in favor of `getInvitations()`)
 *   [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 *   [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 *   [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
