--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -9,11 +9,11 @@ These are all methods on the [Organization](/docs/references/javascript/organiza
 
 ## `getMemberships()`
 
+Retrieve the members of the currently active organization.
+
 ```typescript
 function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<OrganizationMembership>>;
 ```
-
-Retrieve the members of the currently active organization.
 
 ### `GetMembersParams`
 
@@ -27,8 +27,7 @@ Retrieve the members of the currently active organization.
   `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
-
-### Returns
+### `getMemberships()` returns
 
 | Type | Description |
 | --- | --- |
@@ -52,13 +51,13 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 
 ## `addMember()`
 
-```typescript
-function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
-```
-
 Adds a user as a member to an organization. A user can only be added to an organization if they are not already members of it and if they already exist in the same instance as the organization.
 
 Please note that only administrators can add members to an organization.
+
+```typescript
+function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
+```
 
 ### `AddMemberParams`
 
@@ -67,7 +66,7 @@ Please note that only administrators can add members to an organization.
 | `userId` | `string` | The ID of the user that will be added as a member to the organization. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) that the user will have in the organization. |
 
-### Returns
+### `addMember()` returns
 
 | Type | Description |
 | --- | --- |
@@ -75,11 +74,11 @@ Please note that only administrators can add members to an organization.
 
 ## `updateMember()`
 
+Updates a member based on the `userId`. Currently, only a user's role can be updated.
+
 ```typescript
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
-
-Updates a member based on the `userId`. Currently, only a user's role can be updated.
 
 ### `UpdateMembershipParams`
 
@@ -88,7 +87,7 @@ Updates a member based on the `userId`. Currently, only a user's role can be upd
 | `userId` | `string` | The user identifier. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) of the new member. |
 
-### Returns
+### `updateMember()` returns
 
 | Type | Description |
 | --- | --- |
@@ -96,23 +95,23 @@ Updates a member based on the `userId`. Currently, only a user's role can be upd
 
 ## `removeMember()`
 
+Removes a member from the organization based on the `userId`.
+
 ```typescript
 function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
 
-Removes a member from the organization based on the `userId`.
-
-### Properties
+### `removeMember()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The user identifier. |
 
-### Returns
+### `removeMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] object. |
 
 [pag-ref]: /docs/references/javascript/types/paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
