fix(v5-upgrade-guide): Separate properties from raw response data for image related changes

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -544,16 +544,18 @@ Some more niche use cases and their changes:
 
     const { data: user } = await clerkClient.users.getUser("")
     ```
-
     Previously, you could access `user.profileImageUrl` and now it's `user.imageUrl`. Various image related properties were all aligned to `imageUrl`. So if you use any of these, change the property:
 
     - `ExternalAccount.picture`
-    - `ExternalAccountJSON.avatar_url`
     - `Organization.logoUrl`
-    - `OrganizationJSON.logo_url`
     - `User.profileImageUrl`
-    - `UserJSON.profile_image_url`
     - `OrganizationMembershipPublicUserData.profileImageUrl`
+
+    Or if you using the raw responses change the following properties to `image_url` in the following types:
+
+    - `ExternalAccountJSON.avatar_url`
+    - `OrganizationJSON.logo_url`
+    - `UserJSON.profile_image_url`
     - `OrganizationMembershipPublicUserDataJSON.profile_image_url`
   </AccordionPanel>
 </Accordion>
