chore(v5-upgrade-guide): Add note to change the `httpOptions` removal section

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -510,6 +510,7 @@ Some more niche use cases and their changes:
 
 <Accordion titles={["Removal of httpOptions", "Removal of pkgVersion", "Removal of createIsomorphicRequest & buildRequestUrl", "Use .imageUrl for image related responses/resources"]} heading="h4">
   <AccordionPanel>
+    {/* TODO: The buildRequest is not exposed as public API. There is not a alternative at the moment*/}
     The `httpOptions` parameter was removed from the `buildRequest` function. Provide this information on the returned `request` function instead.
 
     ```diff
