feat(v5-upgrade-guide): Remove `clerkClient.__unstable_options`

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -505,6 +505,16 @@ If you would like to have your JWT return all of the user's organizations, you c
       })
     ```
 - The `createEmail()` method (and as such the `emails` API endpoint) has been removed. For the time being no alternative method will be provided for creating and sending emails directly from Clerk's JavaScript SDKs. If you're currently relying on this functionality and wish to update, please reach out to [Clerk's support](/support).
+- The `clerkClient.__unstable_options` property used to update the internal options was removed. Create a new clerkClient instance using `createClerkClient` instead of mutating the existing. Example:
+
+    ```diff
+    import { createClerkClient } from '@clerk/backend';
+
+    const clerkClient = createClerkClient({ ...options, secretKey: 'secretKey' });
+
+    - clerkClient.__unstable_options.secretKey = 'newSecretKey'
+    + const newClerkClient = createClerkClient({ ...options, secretKey: 'newSecretKey' });
+    ```
 
 Some more niche use cases and their changes:
 
@@ -559,6 +569,7 @@ Some more niche use cases and their changes:
     - `UserJSON.profile_image_url`
     - `OrganizationMembershipPublicUserDataJSON.profile_image_url`
   </AccordionPanel>
+
 </Accordion>
 
 ### `@clerk/chrome-extension`
