feat(v5-upgrade-guide): Add examples for clockSkewInSeconds` renamed to `clockSkewInMs`

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -484,7 +484,47 @@ If you would like to have your JWT return all of the user's organizations, you c
     + } = await clerkClient.organizations.getOrganizationList()
     ```
 
-- `clockSkewInSeconds` was renamed to `clockSkewInMs` but the default value stayed the same.
+- `clockSkewInSeconds` was renamed to `clockSkewInMs` but the default value stayed the same. That change affects all the methods related to `VerifyJwtOptions`. Example:
+
+    ```diff
+    import { verifyJwt } from '@clerk/backend/jwt'
+
+    - verifyJwt(jwt, { clockSkewInSeconds: 4000 })
+    + verifyJwt(jwt, { clockSkewInMs: 4000 })
+
+    import { verifyToken } from '@clerk/backend'
+    - verifyToken(token, { clockSkewInSeconds: 4000 })
+    + verifyToken(token, { clockSkewInMs: 4000 })
+
+    import { createClerkClient } from '@clerk/backend';
+    const clerkClient = createClerkClient({...});
+
+    - clerkClient.authenticateRequest({ clockSkewInSeconds: 4000 })
+    + clerkClient.authenticateRequest({ clockSkewInMs: 4000 })
+
+    import { createAuthenticateRequest } from '@clerk/backend/internal`
+    const authenticateRequest = createAuthenticateRequest(params);
+
+    - authenticateRequest({ clockSkewInSeconds: 4000 })
+    + authenticateRequest({ clockSkewInMs: 4000 })
+
+    import { signedInAuthObject } from '@clerk/backend/internal`
+
+    - signedInAuthObject({ clockSkewInSeconds: 4000 }, sessionClaims)
+    + signedInAuthObject({ clockSkewInMs: 4000 }, sessionClaims)
+
+    import { signedOutAuthObject} from '@clerk/backend/internal`
+
+    - signedOutAuthObject({ clockSkewInSeconds: 4000 }, sessionClaims)
+    + signedOutAuthObject({ clockSkewInMs: 4000 }, sessionClaims)
+    ```
+
+    Also the following types are affected:
+    - `import type { VerifyJwtOptions } from '@clerk/backend/jwt'`
+    - `import type { VerifyTokenOptions } from '@clerk/backend'`
+    - `import type { AuthenticateRequestOptions } from '@clerk/backend/internal'`
+    
+
 - Replace `getPendingOrganizationInvitationList` with `getOrganizationInvitationList` and pass a `status` parameter.
 
     ```diff
