feat(v5-upgrade-guide): Change @clerk/backend/jwt functions signatures
https://github.com/clerk/javascript/pull/2377

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -555,6 +555,27 @@ If you would like to have your JWT return all of the user's organizations, you c
     - clerkClient.__unstable_options.secretKey = 'newSecretKey'
     + const newClerkClient = createClerkClient({ ...options, secretKey: 'newSecretKey' });
     ```
+- The `signJwt`, `hasValidSignature`, `decodeJwt`, `verifyJwt`, `verifyToken` signatures have changed. Instead of returning a value or throwing an error those functions will **always** return a `{ data, error }` value. To keep the existing behaviour check the examples:
+
+  ```diff
+  import { signJwt, hasValidSignature, decodeJwt, verifyJwt } from '@clerk/backend/jwt';
+  import { verifyToken } from '@clerk/backend'
+
+  const { data, error } = await signJwt(...)
+  if (error) throw error;
+
+  const { data, error } = await hasValidSignature(...)
+  if (error) throw error;
+
+  const { data, error } = decodeJwt(...)
+  if (error) throw error;
+
+  const { data, error } = await verifyJwt(...)
+  if (error) throw error;
+
+  const { data, error } = await verifyToken(...)
+  if (error) throw error;
+  ```
 
 Some more niche use cases and their changes:
 
