--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -393,6 +393,32 @@ The `API_URL` export has changed from `https://api.clerk.dev` to `https://api.cl
 #### Removed the `orgs` claim as a default property of the JWT
 
 In v4 of Clerk's SDKs, if you decode the session token that Clerk returns from the server, you'll currently find an `orgs` claim on it. It lists all the orgs associated with the given user. In v5 Clerk returns the `org_id`, `org_slug`, and `org_role` of the **active** organization.
+The `orgs` claim was part of the `JwtPayload`. A few examples of where the `JwtPayload` could be found:
+  
+  ```typescript
+  import { getAuth } from '@clerk/nextjs/server;
+  const claims: JwtPayload = getAuth(request).sessionClaims;
+
+  import { getAuth } from '@clerk/ssr.server';
+  const claims: JwtPayload = (await getAuth(request)).sessionClaims;
+
+  import { getAuth } from '@clerk/fastify';
+  const claims: JwtPayload = (await getAuth(request)).sessionClaims;
+
+  // gatsby-plugin-clerk
+  const claims: JwtPayload = request.auth.sessionClaims;
+
+  import { createClerkClient } from '@clerk/backend';
+  const clerkClient = createClerkClient({ secretKey: '...' });
+  const requestState = await clerkClient.authenticateRequest(request, { publishableKey: '...' });
+  const claims: JwtPayload = requestState.toAuth().sessionClaims;
+
+  import { clerkClient } from '@clerk/clerk-sdk-node';
+  router.use((...args)=>clerkClient.expressRequireAuth()(...args));
+  router.get('/me', async (req, reply: Response) => {
+      return reply.json({ auth: req.auth });
+  });
+  ```
 
 If you would like to have your JWT return all of the user's organizations, you can create a [custom JWT template](/docs/backend-requests/making/jwt-templates) in your dashboard. Add `{ "orgs": "user.organizations" }` to it.
 
