fix(v5-upgrade-guide): Update `authenticateRequest` signature

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -525,14 +525,14 @@ If you would like to have your JWT return all of the user's organizations, you c
     import { createClerkClient } from '@clerk/backend';
     const clerkClient = createClerkClient({...});
 
-    - clerkClient.authenticateRequest({ clockSkewInSeconds: 4000 })
-    + clerkClient.authenticateRequest({ clockSkewInMs: 4000 })
+    - clerkClient.authenticateRequest(request, { clockSkewInSeconds: 4000 })
+    + clerkClient.authenticateRequest(request, { clockSkewInMs: 4000 })
 
     import { createAuthenticateRequest } from '@clerk/backend/internal`
     const authenticateRequest = createAuthenticateRequest(params);
 
-    - authenticateRequest({ clockSkewInSeconds: 4000 })
-    + authenticateRequest({ clockSkewInMs: 4000 })
+    - authenticateRequest(request, { clockSkewInSeconds: 4000 })
+    + authenticateRequest(request, { clockSkewInMs: 4000 })
 
     import { signedInAuthObject } from '@clerk/backend/internal`
 
